# Cry

./: .gitignore  .gitlab-ci.yml  .ignifi.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  VERSION  err.txt
cmake/: conf.cmake  cppcheck.cmake  gccreport.cmake  gcov.cmake  git.cmake  install.cmake  link.cmake  options.cmake  req.cmake  src.cmake  test.cmake  test_src.cmake  vera.cmake  version.cmake  versioner.cmake  versioner.py
cmake/modules/: FindCppCheck.cmake  Findgcrypt.cmake
cmake/templates/: config.h.in
include/: application.h
include/cry/: common.h  config.h  cry.h  version.h
src/: application.cpp  cry.cpp  main.cpp
templates/: config.h.in
test/: app.cpp  passwd.cpp  test.cpp  test.txt  test.txt.369  test.txt.369.d.txt
